# Smart-Dataset-Profiler

./: .gitignore  README.md  pyproject.toml  sample.csv
.github/workflows/: tests.yml
smart_profiler/: loader.py  main.py  profiler.py  quality.py  recommender.py  reporter.py
smart_profiler/analysis/: _shared.py  categorical.py  numeric.py
tests/: test_categorical.py  test_integration.py  test_numeric.py  test_quality.py
