[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-profiler"
version = "1.0.0"
description = "A command-line tool for profiling CSV datasets and generating data quality insights."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
smart-profiler = "smart_profiler.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
